modified image URLs to be relative to currect directory

--- a/3-column-preview-card-component/index.html
+++ b/3-column-preview-card-component/index.html
@@ -31,7 +31,7 @@
     <div class="container">
       <article class="bg-bright-orange">
         <div>
-          <img src="/images/icon-sedans.svg" alt="Sedan car icon">
+          <img src="./images/icon-sedans.svg" alt="Sedan car icon">
         </div>
         <h1>Sedans</h1>
         <p>
@@ -43,7 +43,7 @@
 
       <article class="bg-dark-cyan">
         <div>
-          <img src="/images/icon-suvs.svg" alt="SUVs car icon">
+          <img src="./images/icon-suvs.svg" alt="SUVs car icon">
         </div>
         <h1>SUVs</h1>
         <p>
@@ -55,7 +55,7 @@
 
       <article class="bg-darker-cyan">
         <div>
-          <img src="/images/icon-luxury.svg" alt="Luxury car icon">
+          <img src="./images/icon-luxury.svg" alt="Luxury car icon">
         </div>
         <h1>Luxury</h1>
         <p>
