--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
                 <ul class="text-lg md:text-xl tracking-tight font-medium text-gray-700 list-disc pl-8 mt-2">
                     <li>
-                        <a class="text-pink-600 hover:underline" href="/3-column-preview-card-component/index.html">3 column preview card component card</a>
+                        <a class="text-pink-600 hover:underline" href="./3-column-preview-card-component/index.html">3 column preview card component card</a>
                     </li>
                 </ul>
             </section>
